--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
