--- a/front/package.json
+++ b/front/package.json
@@ -15,9 +15,11 @@
     "isomorphic-unfetch": "^3.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
