--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
+    "cookie": "^0.4.1",
+    "graphql": "^15.6.1",
     "isomorphic-unfetch": "^3.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
+    "@types/graphql": "^14.5.0",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
