--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,3 @@
-// .prettierrc.json
 {
   "printWidth": 80,
   "tabWidth": 2,
@@ -10,5 +9,5 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": true
+  "arrowParens": "always"
 }
