--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.6.1",
+    "graphql-tools": "^8.2.0",
+    "merge-graphql-schemas": "^1.7.8",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.13",
