--- a/back/package.json
+++ b/back/package.json
@@ -9,9 +9,11 @@
     "@babel/preset-env": "^7.15.8",
     "apollo-server": "^3.4.0",
     "apollo-server-express": "^3.4.0",
+    "bcrypt": "^5.0.1",
     "body-parser-graphql": "^1.1.0",
     "compression": "^1.7.4",
     "convert-csv-to-json": "^1.3.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
