--- a/back/package.json
+++ b/back/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-env": "^7.15.8",
     "apollo-server": "^3.4.0",
     "apollo-server-express": "^3.4.0",
+    "bcrypt": "^5.0.1",
     "body-parser-graphql": "^1.1.0",
     "compression": "^1.7.4",
     "convert-csv-to-json": "^1.3.1",
