--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@apollo/react-hooks": "^4.0.0",
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
@@ -19,7 +20,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-apollo": "^3.1.5",
-    "react-dom": "17.0.2"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
