--- a/front/package.json
+++ b/front/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "apollo-cache": "^1.3.5",
     "cookie": "^0.4.1",
     "graphql": "^15.7.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
